@@ -512,8 +512,21 @@ local function onLuaShortcut(event)
     end
 end
 
+local function onPlayerRemoved(event)
+    if event.player_index == world.playerIterator then
+        world.playerIterator = nil
+    end
+end
+
 -- hooks
 
+script.on_event(
+    {
+        defines.events.on_player_left_game,
+        defines.events.on_player_kicked,
+        defines.events.on_player_banned
+    },
+    onPlayerRemoved)
 script.on_event(defines.events.on_lua_shortcut, onLuaShortcut)
 script.on_nth_tick((2*60*60)+0, onStatsGrabPollution)
 script.on_nth_tick((2*60*60)+1, onStatsGrabKill)
